--- a/darkpan-1.0.0/signup.html
+++ b/darkpan-1.0.0/signup.html
@@ -54,6 +54,15 @@
                             <h3>Sign Up</h3>
                         </div>
                         <div class="form-floating mb-3">
+                            <input type="id" class="form-control" id="floatingInput" placeholder="12345">
+                            <label for="floatingInput">Employee ID</label>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            <input type="name" class="form-control" id="floatingInput" placeholder="abcd">
+                            <label for="floatingInput">Name</label>
+                        </div>
+                        <div class="form-floating mb-3">
                             <input type="text" class="form-control" id="floatingText" placeholder="jhondoe">
                             <label for="floatingText">Username</label>
                         </div>
