--- a/darkpan-1.0.0/index.html
+++ b/darkpan-1.0.0/index.html
@@ -196,7 +196,7 @@
                         <div class="bg-secondary rounded d-flex align-items-center justify-content-between p-4">
                             <i class="fa fa-chart-bar fa-3x text-primary"></i>
                             <div class="ms-3">
-                                <p class="mb-2"><a href="form2.html">Expense</a></p>
+                                <p class="mb-2"><a href="form2.php">Expense</a></p>
                                 <h6 class="mb-0">$1234</h6>
                             </div>
                         </div>
